--- a/.github/workflows/cicd-s3.yml
+++ b/.github/workflows/cicd-s3.yml
@@ -23,7 +23,7 @@ jobs:
         aws-region: ${{ env.AWS_REGION }}
 
     - name: Deploy to AWS S3
-      run: aws s3 cp ./index.html s3://bucketname
+      run: aws s3 cp ./index.html s3://landetapablocicds3
         
 
     
